--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -25,6 +25,7 @@
     <!-- Custom Styles -->
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="css/enhanced.css" />
+    <link rel="stylesheet" href="css/visual-effects.css" />
     
     <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
@@ -56,6 +57,7 @@
     <script src="_content/BlazorMonaco/lib/monaco-editor/min/vs/loader.js"></script>
     <script src="_content/BlazorMonaco/blazorMonaco.js"></script>
     <script src="js/theme.js"></script>
+    <script src="js/clipboard.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
