--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ultimate Parquet & Delta Lake Tool</title>
-    <meta name="description" content="Comprehensive browser-based tool for working with Parquet files and Delta Lake tables - inspect, analyze, query, and optimize your data engineering workflows" />
+    <title>Ultimate JSON Tool</title>
+    <meta name="description" content="The ultimate JSON manipulation toolkit - format, validate, convert, and transform JSON with ease" />
     <meta name="theme-color" content="#3b82f6" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
@@ -81,12 +81,6 @@
     <script src="js/virtual-scroll.js"></script>
     <script src="js/accessibility.js"></script>
     <script src="js/auto-completion.js"></script>
-    
-    <!-- Parquet & Delta Lake Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@duckdb/duckdb-wasm@1.31.0/dist/duckdb-browser-mvp.js"></script>
-    <script src="js/apache-arrow.js"></script>
-    <script type="module" src="js/parquet-integration.js"></script>
-    
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
